--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,22 @@
-server.port=80
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost/record_shop
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.max-active=10
+spring.datasource.max-idle=8
+spring.datasource.max-wait=10000
+spring.datasource.min-evictable-idle-time-millis=1000
+spring.datasource.min-idle=8
+spring.datasource.time-between-eviction-runs-millis=1
+
+flyway.baseline-on-migrate=true
+spring.jpa.hibernate.ddl-auto=false;
+
+datasource.flyway.url=jdbc:mysql://localhost/record_shop
+datasource.flyway.username=root
+datasource.flyway.password=root
+flyway.locations=classpath:db/mysql_migration
+datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
