Debugging heroku's DataSource connection url

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${JAWSDB_URL}
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=${URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.max-active=10
@@ -13,8 +13,8 @@ spring.datasource.time-between-eviction-runs-millis=1
 flyway.baseline-on-migrate=true
 spring.jpa.hibernate.ddl-auto=false;
 
-datasource.flyway.url=${JAWSDB_URL}
-#datasource.flyway.username=root
-#datasource.flyway.password=root
+datasource.flyway.url=${URL}
+datasource.flyway.username=${USERNAME}
+datasource.flyway.password=${PASSWORD}
 flyway.locations=classpath:db/mysql_migration
 datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
