--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -3,12 +3,12 @@ spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.max-active=10
-spring.datasource.max-idle=8
-spring.datasource.max-wait=10000
-spring.datasource.min-evictable-idle-time-millis=1000
-spring.datasource.min-idle=8
-spring.datasource.time-between-eviction-runs-millis=1
+#spring.datasource.max-active=10
+#spring.datasource.max-idle=8
+#spring.datasource.max-wait=10000
+#spring.datasource.min-evictable-idle-time-millis=1000
+#spring.datasource.min-idle=8
+#spring.datasource.time-between-eviction-runs-millis=1
 
 flyway.baseline-on-migrate=true
 spring.jpa.hibernate.ddl-auto=false;
