--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -10,11 +10,11 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.min-idle=8
 #spring.datasource.time-between-eviction-runs-millis=1
 
-flyway.baseline-on-migrate=true
-spring.jpa.hibernate.ddl-auto=false;
-
-datasource.flyway.url=${URL}
-datasource.flyway.username=${USERNAME}
-datasource.flyway.password=${PASSWORD}
-flyway.locations=classpath:db/mysql_migration
-datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
+#flyway.baseline-on-migrate=true
+#spring.jpa.hibernate.ddl-auto=false;
+#
+#datasource.flyway.url=${URL}
+#datasource.flyway.username=${USERNAME}
+#datasource.flyway.password=${PASSWORD}
+#flyway.locations=classpath:db/mysql_migration
+#datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
