--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -10,6 +10,7 @@ spring.datasource.min-evictable-idle-time-millis=1000
 spring.datasource.min-idle=5
 spring.datasource.time-between-eviction-runs-millis=1
 
+flyway.enabled=false
 flyway.baseline-on-migrate=true
 spring.jpa.hibernate.ddl-auto=false;
 
