--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+uploadfilepath=src/main/resources/public/images/records
+
 spring.datasource.url=jdbc:mysql://localhost/record_shop
 spring.datasource.username=root
 spring.datasource.password=root
