--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-uploadfilepath=src/main/resources/public/images/records
+uploadfilepath=images/
 
 spring.datasource.url=jdbc:mysql://localhost/record_shop
 spring.datasource.username=root
