--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,3 +1,5 @@
+uploadfilepath=images/
+
 spring.datasource.url=${URL}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
