Angular bugfix when no cover is uploaded / Change /images => /img

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-uploadfilepath=images/
+uploadfilepath=img/
 
 spring.datasource.url=jdbc:mysql://localhost/record_shop
 spring.datasource.username=root
