--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
         	<groupId>javax.cache</groupId>
         	<artifactId>cache-api</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
     </dependencies>
     
 	<build>
