A Health indicator for checking if img directory is writable

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,3 +22,6 @@ datasource.flyway.username=root
 datasource.flyway.password=root
 flyway.locations=classpath:db/mysql_migration
 datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
+
+endpoints.health.sensitive=false
+endpoints.health.enabled=true
