Enable "directory access" health indicator at heroku

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -21,3 +21,6 @@ datasource.flyway.username=${USERNAME}
 datasource.flyway.password=${PASSWORD}
 flyway.locations=classpath:db/mysql_migration
 datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
+
+endpoints.health.sensitive=false
+endpoints.health.enabled=true
