Custom health path

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,5 +23,6 @@ datasource.flyway.password=root
 flyway.locations=classpath:db/mysql_migration
 datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
 
+endpoints.health.path=/checkMyHealth
 endpoints.health.sensitive=false
 endpoints.health.enabled=true
